[gd_scene load_steps=6 format=3 uid="uid://bvq8j5x8qwxpd"]

[ext_resource type="Script" uid="uid://cb4u3qu5ytatm" path="res://actors/DynamicPlatform.gd" id="1_script"]
[ext_resource type="Texture2D" uid="uid://c4vexcf71vflk" path="res://content/Graphics/Sprites/Tiles/Default/block_yellow.png" id="2_texture"]
[ext_resource type="Script" uid="uid://blwcrdiqapi7b" path="res://actors/BreakableComponent.gd" id="3_breakable_script"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_1"]
emission_shape = 2
emission_sphere_radius = 1.0
direction = Vector3(0, -1, 0)
initial_velocity_min = 30.0
initial_velocity_max = 100.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
gravity = Vector3(0, 980, 0)
scale_min = 0.2
scale_max = 0.6

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sn0kv"]
size = Vector2(64, 64)

[node name="DynamicPlatform" type="StaticBody2D"]
script = ExtResource("1_script")
patch_margin_left = null
patch_margin_right = null
patch_margin_top = null
patch_margin_bottom = null
axis_stretch_horizontal = null
axis_stretch_vertical = null

[node name="BreakableComponent" type="Node" parent="."]
script = ExtResource("3_breakable_script")

[node name="BreakTimer" type="Timer" parent="BreakableComponent"]
one_shot = true

[node name="ShakeTimer" type="Timer" parent="BreakableComponent"]
wait_time = 2.0
one_shot = true

[node name="BreakParticles" type="GPUParticles2D" parent="BreakableComponent"]
position = Vector2(48, 16)
emitting = false
amount = 20
lifetime = 2.0
visibility_rect = Rect2(-100, 0, 200, 80)
local_coords = true
process_material = SubResource("ParticleProcessMaterial_1")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
offset_right = 64.0
offset_bottom = 64.0
texture = ExtResource("2_texture")
region_rect = Rect2(0, 0, 64, 64)
patch_margin_left = 18
patch_margin_top = 20
patch_margin_right = 18
patch_margin_bottom = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(32, 32)
shape = SubResource("RectangleShape2D_sn0kv")
